--- a/examples/gulp/styles/main.scss
+++ b/examples/gulp/styles/main.scss
@@ -1,7 +1,7 @@
 @import "background";
 
 a {
-    color: red;
+    color: green;
     transition: all .5s ease-in-out;
     &:hover {
         color: orange;
